Fixed bug with download button

--- a/index.html
+++ b/index.html
@@ -80,8 +80,11 @@
         <canvas class="canvas" id="photo" width="300px" height="300px"></canvas>
         <div id="downloadPhotoButtons">
             <button id="downloadButton">
-                <img src="src/misc/download-button .png" alt="Download">
+                <img src="src/misc/download-button.png" alt="Download">
             </button>
+            <!-- <button id="shareButton">
+                <img src="src/misc/share-button.png" alt="Share">
+            </button> -->
             <button id="backButton">
                 <img src="src/misc/back-button.png" alt="Back">
             </button>
